# Kamchatka_eco_project

./: .gitignore  README.md  docker-compoce.yaml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
trails/: models.py  parsing.py  serliazers.py  urls.py  utils.py  views.py
trails/migrations/: 0001_initial.py  0002_alter_notification_options_alter_rule_options_and_more.py
users/: admin.py  email_utils.py  models.py  serliazers.py  urls.py  utils.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options_user_avatar_user_city_and_more.py  0003_user_confirmation_code.py  0004_alter_user_confirmation_code.py  0005_alter_user_confirmation_code.py
users/templates/users/: error.html  success.html
